--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ layout: home
 	  </div>
 	  <h3>I'm <strong>{{ site.author }}</strong>, an Applied Mathematician.</h3>
 	  <h3>I love all things computer science and maths.</h3>
-	  <h3>Have a look at some of my working <a href="{{ site.baseurl }}/projects.html"> projects</a>.</h3>
-	  <h3>For more check out my academic &amp; professional <a href="{{ site.baseurl }}/resume.html"> Resume</a>.</h3>
+	  <h3>Have a look at my <a href="{{ site.baseurl }}/publications.html"> publications </a>.</h3>
+	  <h3>For more check out my <a href="{{ site.baseurl }}/CV.html"> CV</a>.</h3>
 	  <h3>Contact me at <a href="mailto:{{ site.email }}">email</a>.</h3>
 	  {% include social.html %}
 	</div>
