--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@ layout: home
 	  <div class="avatar">
 		<img class="img-circle" src="{{ site.baseurl }}static/img/{{ site.avatar }}" alt="Responsive image">
 	  </div>
-	  <h3>I'm <strong>{{ site.author }}</strong>, an Applied Mathematician.</h3>
-	  <h3>I love all things computer science and maths.</h3>
+	  <h3>I'm <strong>{{ site.author }}</strong>, a researcher at WIAS.</h3>
+	  <h3>A pure mathematician by training but working as an applied one.</h3>
 	  <h3>Have a look at my <a href="{{ site.baseurl }}/publications.html"> publications </a>.</h3>
 	  <h3>For more check out my <a href="{{ site.baseurl }}/CV.html"> CV</a>.</h3>
-	  <h3>Contact me at <a href="mailto:{{ site.email }}">email</a>.</h3>
-	  {% include social.html %}
+	  <h3>Contact me at  <a href="mailto:Vaios.laschos@wias-berlin.de">Vaios.laschos at wias-berlin.de</a></a>.</h3>
 	</div>
 </section>
