--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@ layout: home
 <section id="about">
 	<div class="container">
 	  <div class="avatar">
-		<img class="img-circle" src="{{ site.baseurl }}static/img/{{ site.avatar }}" alt="Responsive image">
+		<img class="image"       img src="{{ site.baseurl }}/static/img/profile.jpg"> 
+		<img class="image hover"       img src="{{ site.baseurl }}/static/img/profile2.jpg"> 
 	  </div>
 	  <h3>I'm <strong>{{ site.author }}</strong>, a researcher at WIAS.</h3>
 	  <h3>A pure mathematician by training but working as an applied one.</h3>
