--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@ layout: home
 		<img class="image"       img src="{{ site.baseurl }}/static/img/profile.jpg"> 
 		<img class="image hover"       img src="{{ site.baseurl }}/static/img/profile2.jpg"> 
 	  </div>
-	  <h3>I'm <strong>{{ site.author }}</strong>, a researcher at WIAS.</h3>
+	  <h3>I'm <strong>{{ site.author }}</strong>, a researcher at TU-Berlin.</h3>
 	  <h3>A pure mathematician by training but working as an applied one.</h3>
 	  <h3>Have a look at my <a href="{{ site.baseurl }}/publications.html"> publications </a>.</h3>
 	  <h3>For more check out my <a href="{{ site.baseurl }}/CV.html"> CV</a>.</h3>
-	  <h3>Contact me at  <a href="mailto:Vaios.laschos@wias-berlin.de">Vaios.laschos at wias-berlin.de</a></a>.</h3>
+	  <h3>Contact me at  <a href="mailto:Vaios.laschos@tu-berlin.de">Vaios.laschos at tu-berlin.de</a></a>.</h3>
 	</div>
 </section>
